<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_label"/>
    <item
        android:id="@+id/pay"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_payment_24"
        android:title="@string/pay_label"/>
    <item
        android:id="@+id/order"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_coffee_24"
        android:title="@string/order_label"
        />
    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/favorite_label"
        />
</menu>