...
            app:layout_constraintHeight_percent="0.1"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:text="@string/order_label"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_order_tab"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_order_label"
            >
...
