...
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.4"
            tools:text="다시 보지 않기" />

        <Button
            android:id="@+id/btn_event_close"
            style="@style/CloseEventButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
...
